# Tesseract

./: .gitignore  CMakeLists.txt  README.md  main.cpp
assets/: preset1.json  preset2.json
src/: game_config.json  main.cpp
src/libs/imgui/: imgui.h  imgui_draw.cpp
src/nodes/: AsciiDonutNode.h  ConversorNode.h  NodeBase.h  PaletteViewerNode.h  PathInputNode.h  PresetEditorNode.h  PresetNode.h  StringNode.h  ViewDataNode.h
src/pins/: Link.h  NodePin.h
src/registry/: NodeRegistry.h  RuntimeNodeRegistry.h
src/types/: Preset.h
src/util/: IdUtil.h  Palette.h  SaveLoad.h
tools/slk/: settings.json
tools/slk/palette/: apollo.pal  aurora.pal  dawnbringer-32.pal  dawnbringers-8-color.pal  duel.pal  endesga-32.pal  quake.pal  slso8.pal  sweetie-16.pal
